# humnumsort

./: Cargo.toml  GNUmakefile  README.md  hns.BROKEN.1
.cargo/: config
doc/: hns.1  hns.1.html  hns.1.md
lib/: Cargo.toml
lib/src/: args.rs  humnum.rs  lib.rs
src/: args.rs  humnum.rs  lib.rs  main.rs
tests/data/cheap/: README_example.shuf.txt  README_example.txt  README_example2.shuf.txt  README_example2.txt  dig.shuf.txt  dig.txt  ips.shuf.txt  ips.txt
tests/scripts/: ipsfile.sh  run_tests.sh
xtask_mangen/: Cargo.toml
xtask_mangen/src/: main.rs
xtask_symlink/: Cargo.toml
xtask_symlink/src/: main.rs
