[package]
name = "humnum"
version = "0.1.1"
edition = "2021"
readme = "README.md"
description = "Human numeric sorting program — does what `sort -h` is supposed to do!"
repository = "https://github.com/ctrlcctrlv/humnumsort"
license = "Apache-2.0"
categories = ["command-line-utilities", "text-processing", "algorithms"]
authors = ["Fredrick Brennan <copypaste@kittens.ph>", "`humnumsort` Project Authors"]
keywords = ["sorting", "coreutils", "numeric-sorting", "human-numeric-sort", "stdin", "stdout"]

[lib]
name = "humnum"
path = "src/lib.rs"

[dependencies]
derive_more = "0.99"
env_logger = "0.9"
atoi = "1.0"
log = "0.4"
clap = { version = "3.2", default-features = false, features = ["std", "derive", "wrap_help", "color"] }
const_format = "0.2"

[features]
force_color = []
